--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   sleek_circular_slider: ^1.2.0
+  just_audio: ^0.6.14+1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/woa.jpg
+    - assets/7min.mp3
+    - assets/20min.mp3
+    - assets/30min.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
