--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   sleek_circular_slider: ^1.2.0
   just_audio: ^0.6.14+1
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
