--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/woa.jpg
+    - assets/wheel_of_awareness.png
     - assets/7min.mp3
     - assets/20min.mp3
     - assets/30min.mp3
