--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/wheel_of_awareness.png
     - assets/7min.mp3
     - assets/20min.mp3
+    - assets/23min.mp3
     - assets/30min.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
