--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  sleek_circular_slider: ^1.2.0
-  just_audio: ^0.6.14+1
-  url_launcher: ^5.7.10
+  sleek_circular_slider: ^2.0.1
+  just_audio: ^0.9.19
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
