--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/icon.png"
-  adaptive_icon_background: "0x2C566E"
+  image_path: "assets/icon/icon_v3.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/icon_v3_foreground.png"
   remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
