--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   just_audio: ^0.9.19
   url_launcher: ^6.0.20
   flutter_spinbox: ^0.8.0
+  flutter_background: ^1.1.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
